# tempo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  claude.md  code-review.md  deny-servo.toml  deny.toml  final.md
.claude/skills/browser-hardening/: SKILL.md
.claude/skills/browser-hardening/agents/: openai.yaml
.claude/skills/review-pr/: SKILL.md
.claude/skills/tempo-gh-sweep/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: audit.yml  ci.yml  linux-agent-gate.yml  release.yml
crates/tempo-act/: Cargo.toml
crates/tempo-act/benches/: quiescence.rs
crates/tempo-act/src/: detect.rs  lib.rs
crates/tempo-agent/: Cargo.toml
crates/tempo-agent/src/: decider.rs  lib.rs
crates/tempo-bidi/: Cargo.toml
crates/tempo-bidi/src/: lib.rs
crates/tempo-cli/: Cargo.toml
crates/tempo-cli/src/: main.rs
crates/tempo-cli/tests/: run_decided_task.rs
crates/tempo-compat/: Cargo.toml
crates/tempo-compat/src/: lib.rs
crates/tempo-config/: Cargo.toml
crates/tempo-config/src/: lib.rs
crates/tempo-crawl/: Cargo.toml
crates/tempo-crawl/src/: lib.rs
crates/tempo-driver/: Cargo.toml
crates/tempo-driver/src/: lib.rs
crates/tempo-engine-cdp/: Cargo.toml
crates/tempo-engine-cdp/benches/: request_policy.rs
crates/tempo-engine-cdp/src/: lib.rs
crates/tempo-engine-cdp/tests/: tempod_live.rs  uds_driver.rs
crates/tempo-engine-host/: Cargo.toml
crates/tempo-engine-host/benches/: framing.rs
crates/tempo-engine-host/src/: lib.rs
crates/tempo-engine-servo/: Cargo.toml  build.rs
crates/tempo-engine-servo/src/: lib.rs  servo_embedder.rs
crates/tempo-engine-webview/: Cargo.toml
crates/tempo-engine-webview/runtime/: tempo-webview-observe.js
crates/tempo-engine-webview/src/: lib.rs
crates/tempo-evals/: Cargo.toml
crates/tempo-evals/src/: lib.rs
crates/tempo-handshake/: Cargo.toml
crates/tempo-handshake/src/: lib.rs
crates/tempo-headless/: Cargo.toml
crates/tempo-headless/src/: lib.rs  main.rs
crates/tempo-headless/tests/: tempod_process.rs
crates/tempo-ios-core/: Cargo.toml
crates/tempo-ios-core/src/: lib.rs
crates/tempo-mcp/: Cargo.toml
crates/tempo-mcp/fixtures/: mcp-tools.catalog.json
crates/tempo-mcp/src/: lib.rs
crates/tempo-net/: Cargo.toml
crates/tempo-net/src/: lib.rs
crates/tempo-observe/: Cargo.toml
crates/tempo-observe/benches/: observe.rs
crates/tempo-observe/src/: lib.rs
crates/tempo-policy/: Cargo.toml
crates/tempo-policy/benches/: policy.rs
crates/tempo-policy/src/: lib.rs  trust.rs
crates/tempo-schema/: Cargo.toml
crates/tempo-schema/src/: lib.rs
crates/tempo-session/: Cargo.toml
crates/tempo-session/benches/: cassettes.rs  journal.rs
crates/tempo-session/src/: lib.rs
crates/tempo-shell/: Cargo.toml
crates/tempo-shell/src/: agent.rs  app.rs  lib.rs  main.rs  surface.rs  tab.rs  transport.rs  ui.rs  window.rs
crates/tempo-skills/: Cargo.toml
crates/tempo-skills/src/: lib.rs
crates/tempo-speculate/: Cargo.toml
crates/tempo-speculate/src/: lib.rs
crates/tempo-taint/: Cargo.toml
crates/tempo-taint/src/: lib.rs
crates/tempo-telemetry/: Cargo.toml
crates/tempo-telemetry/src/: lib.rs  log.rs  metrics.rs
crates/tempo-toolexec/: Cargo.toml
crates/tempo-toolexec/src/: lib.rs
crates/tempo-urlpolicy/: Cargo.toml
crates/tempo-urlpolicy/src/: lib.rs
crates/tempo-web-shell/: app.js  index.html  styles.css
docker/: linux-agent.Dockerfile
docs/: AGENT_TEMPOD_TOPOLOGY_ADR.md  ENGINE_RUNTIME_GOVERNANCE_ADR.md  ENVIRONMENT.md  OBSERVATION_COMPILE_LOCUS_ADR.md  PERFORMANCE_DOCTRINE.md  PLATFORMS.md  TAINT_SANDBOX_ADR.md  agent-worktrees.md  api-style-alignment.md  browser-hardening.md  browser-metrics-optimization-ledger.md  identity-and-oauth.md
docs/issues/: 0004-browser-hardening-policy.md
fixtures/compat/: ci-scorecard-pass.json
fixtures/evals/: ci-budget-pass.jsonl
fixtures/evals/differential/: README.md  page1-checkout-browser-use-dom.json  page1-checkout-browser-use-dom.txt  page1-checkout-oracle.json  page1-checkout-playwright-a11y.json  page1-checkout-playwright-a11y.yaml  page1-checkout-tempo.json  page2-search-browser-use-dom.json  page2-search-browser-use-dom.txt  page2-search-oracle.json  page2-search-playwright-a11y.json  page2-search-playwright-a11y.yaml  page2-search-tempo.json
fixtures/evals/live_agent/: README.md  checkout-actions.json  checkout.html
fixtures/evals/skill_drift/: README.md  case1-moved-position-post.json  case1-moved-position-pre.json  case2-renamed-target-post.json  case2-renamed-target-pre.json  case3-removed-target-post.json  case3-removed-target-pre.json
fixtures/observe/: corpus-pass.json
fixtures/security/: injection-pass.json  taint-redteam-pass.json
scripts/: agent-browser-bench.sh  agent_bench_status.py  agent_browser_bench.py  bench.sh  cargo-servo-tempo.sh  check-denial-sentinels.sh  check-ios-core-graph.sh  check-linux-agent-gate-mode.sh  check-no-captcha-solver.sh  check-no-solver.sh  check-observation-boundary.sh  check-servo-public-api.sh  check-servo-tempo-fork.sh  check-toolexec-composition-status.sh  compare-agent-bench-artifacts.py  linux-agent-gate.sh  new-agent-worktree.sh  requirements-agent-bench.txt  setup-cdp-chrome.sh  test-live-cdp.sh  validate-agent-bench-artifacts.py
scripts/agent_bench_runners/: browser_use_dom_loop.py  browser_use_package.py  playwright_checkout.py
tests/fixtures/observation-boundary/: raw-ax-leak.rs
tests/fixtures/servo-public-api/: public-leak.rs
tests/toolexec-live/: Cargo.toml
tests/toolexec-live/src/: lib.rs
tests/toolexec-live/tests/: live.rs
