[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/jadenfix/tempo"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tempo_servo_fork_source)", "cfg(tempo_servo_fork_lock_checked)"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
