[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/jadenfix/tempo"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha2 = "0.10"
thiserror = "2"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

# Optimized shipping profile: thin LTO + a single codegen unit measurably help
# the hot paths (observation compile, cassette replay, transport framing) at
# acceptable build-time cost; release binaries ship stripped. Benches inherit
# release but keep line tables so profilers stay useful.
[profile.release]
lto = "thin"
codegen-units = 1
# "debuginfo", not "symbols": tempod is a long-running daemon and panic
# backtraces from the field must keep symbol names; dropping debuginfo alone
# captures most of the size win.
strip = "debuginfo"

[profile.bench]
inherits = "release"
strip = "none"
debug = "line-tables-only"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
