[package]
name = "tempo-act"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }

[dev-dependencies]
async-trait.workspace = true
futures = "0.3"
serde_json.workspace = true
