[package]
name = "tempo-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-act = { path = "../tempo-act" }
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-policy = { path = "../tempo-policy" }
tempo-session = { path = "../tempo-session" }
tempo-skills = { path = "../tempo-skills" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tempo-engine-cdp = { path = "../tempo-engine-cdp" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
