[package]
name = "tempo-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tempo-act = { path = "../tempo-act" }
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-handshake = { path = "../tempo-handshake" }
tempo-policy = { path = "../tempo-policy" }
tempo-session = { path = "../tempo-session" }
tempo-skills = { path = "../tempo-skills" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Retry backoff sleeps in the Anthropic decider; already in the tree via reqwest.
tokio = { version = "1", features = ["time"] }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tempo-engine-cdp = { path = "../tempo-engine-cdp" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
