[package]
name = "tempo-bidi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-net = { path = "../tempo-net" }
tempo-schema = { path = "../tempo-schema" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
