[package]
name = "tempo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tempo-cli"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tempo-compat = { path = "../tempo-compat" }
tempo-evals = { path = "../tempo-evals" }
tempo-schema = { path = "../tempo-schema" }
tempo-session = { path = "../tempo-session" }
thiserror.workspace = true

[lints]
workspace = true
