[package]
name = "tempo-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
test-driver = []

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-urlpolicy = { path = "../tempo-urlpolicy" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
futures = "0.3"

[lints]
workspace = true
