[package]
name = "tempo-engine-cdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
serde_json = { workspace = true }
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-engine-host = { path = "../tempo-engine-host" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"

[lints]
workspace = true
