[package]
name = "tempo-engine-cdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The runnable engine host for the human loop (#397): serves the CDP driver over
# the daemon's engine UDS. Declared explicitly so the binary is a visible target.
[[bin]]
name = "tempo-engined-cdp"
path = "src/bin/tempo-engined-cdp.rs"

[dependencies]
async-trait = { workspace = true }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
serde_json = { workspace = true }
tempfile = "3"
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-engine-host = { path = "../tempo-engine-host" }
tempo-net = { path = "../tempo-net" }
tempo-observe = { path = "../tempo-observe" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2"

[dev-dependencies]
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
