[package]
name = "tempo-engine-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
tempo-driver = { path = "../tempo-driver" }
tempo-schema = { path = "../tempo-schema" }
tempo-session = { path = "../tempo-session" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
