[package]
name = "tempo-engine-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
base64 = "0.22"
getrandom = "0.3"
tempo-driver = { path = "../tempo-driver" }
tempo-schema = { path = "../tempo-schema" }
tempo-session = { path = "../tempo-session" }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true
tokio = { version = "1", features = ["rt"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd", target_os = "dragonfly"))'.dependencies]
nix = { version = "0.29", features = ["socket", "user"] }

[dev-dependencies]
criterion.workspace = true
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

[lints]
workspace = true

[[bench]]
name = "framing"
harness = false
