[package]
name = "tempo-engine-servo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-engine-host = { path = "../tempo-engine-host" }
tempo-net = { path = "../tempo-net" }
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
