[package]
name = "tempo-engine-webview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tempo-driver = { path = "../tempo-driver" }
tempo-net = { path = "../tempo-net" }
tempo-observe = { path = "../tempo-observe" }
tempo-schema = { path = "../tempo-schema" }

[dev-dependencies]
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
