[package]
name = "tempo-handshake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json.workspace = true
tempo-net = { path = "../tempo-net" }
tempo-schema = { path = "../tempo-schema" }
thiserror.workspace = true
url = "2"

[lints]
workspace = true
