[package]
name = "tempo-headless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tempod"
path = "src/main.rs"

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-agent = { path = "../tempo-agent" }
tempo-bidi = { path = "../tempo-bidi" }
tempo-driver = { path = "../tempo-driver" }
tempo-engine-host = { path = "../tempo-engine-host" }
tempo-mcp = { path = "../tempo-mcp" }
async-trait.workspace = true
base64 = "0.22"
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
thiserror.workspace = true

[dev-dependencies]
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
