[package]
name = "tempo-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
httpdate = "1"
sha2.workspace = true
tempo-schema = { path = "../tempo-schema" }
tempo-urlpolicy = { path = "../tempo-urlpolicy" }
url = "2"

[lints]
workspace = true
