[package]
name = "tempo-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
png = "0.17"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempo-schema = { path = "../tempo-schema" }

[lints]
workspace = true
