[package]
name = "tempo-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
chacha20poly1305 = "0.10"
getrandom = "0.3"
rusqlite = "=0.37.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[bench]]
name = "cassettes"
harness = false

[[bench]]
name = "journal"
harness = false
