[package]
name = "tempo-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tempo"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-headless = { path = "../tempo-headless" }
tempo-mcp = { path = "../tempo-mcp" }
thiserror = { workspace = true }

[dev-dependencies]
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tempo-engine-host = { path = "../tempo-engine-host" }

[lints]
workspace = true
