[package]
name = "tempo-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tempo"
path = "src/main.rs"

# The GUI binary only builds when the `window` feature is on, so the default
# `cargo build/check --workspace` (and CI's display-less `check` job) skip it.
[[bin]]
name = "tempo-window"
path = "src/bin/tempo-window.rs"
required-features = ["window"]

[features]
# First GUI stack in this crate: `eframe` bundles winit + egui + a glow (GL)
# backend. OFF by default so headless CI never compiles it (no display / GL
# system libs on the `check` runner). Build the window with `--features window`.
# `png`/`base64` are pulled in only here: the page-state pane decodes the base64
# PNG the `screenshot` MCP tool returns into pixels for display. The pure model
# only ever holds the base64 string, so headless builds need neither.
window = ["dep:eframe", "dep:png", "dep:base64"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempo-schema = { path = "../tempo-schema" }
# Taint predicate for the agent-panel badge: `contains_untrusted` over the spans
# already carried on the events stream's observations. No new taint backend.
tempo-taint = { path = "../tempo-taint" }
tempo-driver = { path = "../tempo-driver" }
tempo-headless = { path = "../tempo-headless" }
tempo-mcp = { path = "../tempo-mcp" }
thiserror = { workspace = true }
# winit + egui + glow, one dependency. default-features off trims accesskit and
# web-only bits; wayland/x11 are Linux-only (cfg-gated, inert elsewhere).
eframe = { version = "0.35", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
# Screenshot-pane decode path (window feature only). `png` matches the version
# tempo-observe already uses; `base64` matches the sibling shell/net crates.
png = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }
tempo-engine-host = { path = "../tempo-engine-host" }
tempo-net = { path = "../tempo-net" }

[lints]
workspace = true
