[package]
name = "tempo-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
