[package]
name = "tempo-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-telemetry = { path = "../tempo-telemetry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
