[package]
name = "tempo-speculate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-session = { path = "../tempo-session" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
