[package]
name = "tempo-speculate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-act = { path = "../tempo-act" }
tempo-session = { path = "../tempo-session" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures = "0.3"
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
