[package]
name = "tempo-speculate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempo-schema = { path = "../tempo-schema" }
tempo-driver = { path = "../tempo-driver" }
tempo-act = { path = "../tempo-act" }
tempo-session = { path = "../tempo-session" }
serde.workspace = true
thiserror.workspace = true
futures = "0.3"

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempo-driver = { path = "../tempo-driver", features = ["test-driver"] }

[lints]
workspace = true
