[package]
name = "tempo-toolexec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
beatbox-client = { git = "https://github.com/jadenfix/beatbox.git", rev = "b2e7b18e95563bc95aea58583e40f23a455df19f" }
serde_json.workspace = true
thiserror.workspace = true
tempo-schema = { path = "../tempo-schema" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
