[package]
name = "tempo-toolexec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
beatbox-client = { git = "https://github.com/jadenfix/beatbox.git", rev = "390013fc1e1f432b8fa1ffc494f88d05c14aa7fc" }
serde_json.workspace = true
thiserror.workspace = true
tempo-driver = { path = "../tempo-driver" }
tempo-schema = { path = "../tempo-schema" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
