[package]
name = "tempo-toolexec-live-tests"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[workspace]

[dependencies]
axum = "0.8"
beatbox-engine = { git = "https://github.com/jadenfix/beatbox.git", rev = "b2e7b18e95563bc95aea58583e40f23a455df19f" }
beatbox-server = { git = "https://github.com/jadenfix/beatbox.git", rev = "b2e7b18e95563bc95aea58583e40f23a455df19f" }
serde_json = "1"
tempo-schema = { path = "../../crates/tempo-schema" }
tempo-toolexec = { path = "../../crates/tempo-toolexec" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
