[package]
name = "tempo-toolexec-live-tests"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[workspace]

[dependencies]
axum = "0.8"
beatbox-engine = { git = "https://github.com/jadenfix/beatbox.git", rev = "390013fc1e1f432b8fa1ffc494f88d05c14aa7fc" }
beatbox-server = { git = "https://github.com/jadenfix/beatbox.git", rev = "390013fc1e1f432b8fa1ffc494f88d05c14aa7fc" }
serde_json = "1"
tempo-schema = { path = "../../crates/tempo-schema" }
tempo-toolexec = { path = "../../crates/tempo-toolexec" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
